<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Story App</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_login_page">Hi, Dicoding Friends!</string>
    <string name="message_login_page">Ready to see other coders stories, enter your data first!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_register_page">Complete your personal data</string>
    <string name="nama">Name</string>
    <string name="daftar">Register</string>
    <string name="gallery">Gallery</string>
    <string name="camera">camera</string>
    <string name="description">Description</string>
    <string name="welcome_title">Welcome to Story App</string>
    <string name="message_weolcome_page">Let\'s see inspiring stories from other Dicoding alumni</string>
    <string name="upload">Upload</string>
    <string name="empty_image_warning">Please insert the image file first.</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings Language</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="retry">Retry</string>
    <string name="location_not_found">Location Not Found</string>
    <string name="location">Location</string>

</resources>